[package]
name = "token-program-indexing"
version = "0.2.1"
edition = "2021"

[dependencies]
carbon-core = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }
carbon-log-metrics = { workspace = true }
carbon-yellowstone-grpc-datasource = { workspace = true }
carbon-kamino-lending-decoder = { workspace = true }
carbon-token-program-decoder = { workspace = true }
carbon-mpl-token-metadata-decoder = { workspace = true }

yellowstone-grpc-proto = { version = "2.0.0", git = "https://github.com/rpcpool/yellowstone-grpc.git", rev = "17faff5ac068c2f212c471acf67a8dcc1d7caff5" }
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.83"
log = "0.4.22"
env_logger = "0.11.5"
dotenv = "0.15.0"
tokio-postgres = "0.7"
deadpool-postgres = "0.10"
postgres-native-tls = "0.5"
native-tls = "0.2"
chrono = "0.4"
